<resources>
    <string name="app_name">CurrencyExchange</string>
    <string name="flag_of_currency">flag of currency</string>
    <string name="za_hardcode">за %d единиц</string>
    <string name="state_of_currency">state of currency</string>
    <string name="currency_difference">%s₽</string>
    <string name="currency_value">%s₽</string>
    <string name="currency_time">Курс валют на %s</string>
    <string name="main">Главная</string>
    <string name="currency_exchange">обмен валюты</string>
    <string name="profile">профиль</string>
    <string name="error">Нет доступа к сети</string>
</resources>